--- a/proxy-server/salvium-proxy.conf
+++ b/proxy-server/salvium-proxy.conf
@@ -12,15 +12,19 @@ upstream salvium_nodes {
     keepalive 32;
 }
 
-map $http_origin $cors_origin {
-    default "";
-    "https://siko-ctrl.github.io/stats" "$http_origin";
-    "http://localhost:8080" "$http_origin";  # For local development
+# Redirect HTTP to HTTPS
+server {
+    listen 80;
+    server_name 172.245.110.15.nip.io;
+    return 301 https://$host$request_uri;
 }
 
 server {
-    listen 80;
-    server_name _;
+    listen 443 ssl;
+    server_name 172.245.110.15.nip.io;
+
+    ssl_certificate /etc/letsencrypt/live/172.245.110.15.nip.io/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/172.245.110.15.nip.io/privkey.pem;
 
     access_log /var/log/nginx/salvium_access.log custom_log;
     error_log /var/log/nginx/salvium_error.log debug;
@@ -39,15 +43,13 @@ server {
         proxy_read_timeout 20s;
 
         # CORS headers
-        if ($cors_origin) {
-            add_header 'Access-Control-Allow-Origin' $cors_origin always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-        }
+        add_header 'Access-Control-Allow-Origin' 'https://siko-ctrl.github.io' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         
         # Handle preflight requests
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' $cors_origin;
+            add_header 'Access-Control-Allow-Origin' 'https://siko-ctrl.github.io';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             add_header 'Access-Control-Max-Age' 1728000;
