--- a/proxy-server/salvium-proxy.conf
+++ b/proxy-server/salvium-proxy.conf
@@ -29,7 +29,7 @@ server {
     access_log /var/log/nginx/salvium_access.log custom_log;
     error_log /var/log/nginx/salvium_error.log debug;
 
-    location / {
+    location /json_rpc {
         proxy_pass http://salvium_nodes;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -66,5 +66,10 @@ server {
         # Buffer settings
         proxy_buffers 8 16k;
         proxy_buffer_size 32k;
+    }
+
+    # Catch-all location to prevent exposing server details
+    location / {
+        return 404;
     }
 }
