--- a/proxy-server/salvium-proxy.conf
+++ b/proxy-server/salvium-proxy.conf
@@ -12,7 +12,11 @@ upstream salvium_nodes {
     keepalive 32;
 }
 
-# Redirect HTTP to HTTPS
+map $http_origin $cors_origin {
+    default "";
+    "https://siko-ctrl.github.io" "$http_origin";
+}
+
 server {
     listen 80;
     server_name 172.245.110.15.nip.io;
@@ -30,6 +34,19 @@ server {
     error_log /var/log/nginx/salvium_error.log debug;
 
     location /json_rpc {
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' $cors_origin;
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
+        if ($request_method = 'POST') {
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
+        }
+
         proxy_pass http://salvium_nodes;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -42,21 +59,10 @@ server {
         proxy_send_timeout 20s;
         proxy_read_timeout 20s;
 
-        # CORS headers
-        add_header 'Access-Control-Allow-Origin' 'https://siko-ctrl.github.io' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-        
-        # Handle preflight requests
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://siko-ctrl.github.io';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain; charset=utf-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
+        # Proxy headers
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
         # Error handling
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
