--- a/proxy-server/salvium-proxy.conf
+++ b/proxy-server/salvium-proxy.conf
@@ -12,11 +12,6 @@ upstream salvium_nodes {
     keepalive 32;
 }
 
-map $http_origin $cors_origin {
-    default "";
-    "https://siko-ctrl.github.io" "$http_origin";
-}
-
 server {
     listen 80;
     server_name 172.245.110.15.nip.io;
@@ -33,16 +28,25 @@ server {
     access_log /var/log/nginx/salvium_access.log custom_log;
     error_log /var/log/nginx/salvium_error.log debug;
 
+    # Global CORS configuration
+    set $cors_origin "";
+    if ($http_origin ~* (https://siko-ctrl\.github\.io)) {
+        set $cors_origin $http_origin;
+    }
+
     location /json_rpc {
+        # CORS Preflight Handling
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' $cors_origin;
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Content-Type';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
             add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
             add_header 'Content-Length' 0;
             return 204;
         }
 
+        # Actual request handling
         if ($request_method = 'POST') {
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
         }
