--- a/proxy-server/salvium-proxy.conf
+++ b/proxy-server/salvium-proxy.conf
@@ -29,28 +29,29 @@ server {
     error_log /var/log/nginx/salvium_error.log debug;
 
     # Global CORS configuration
-    set $cors_origin "";
-    if ($http_origin ~* (https://siko-ctrl\.github\.io)) {
-        set $cors_origin $http_origin;
-    }
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Access-Control-Allow-Methods;
+    proxy_hide_header Access-Control-Allow-Headers;
+    proxy_hide_header Access-Control-Allow-Credentials;
 
-    location /json_rpc {
-        # CORS Preflight Handling
+    location / {
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' $cors_origin;
-            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Type' 'text/plain; charset=UTF-8';
             add_header 'Content-Length' 0;
             return 204;
         }
 
-        # Actual request handling
-        if ($request_method = 'POST') {
-            add_header 'Access-Control-Allow-Origin' $cors_origin always;
-        }
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+    }
 
+    location /json_rpc {
         proxy_pass http://salvium_nodes;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -68,6 +69,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
+        # CORS headers for /json_rpc
+        proxy_hide_header Access-Control-Allow-Origin;
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+
         # Error handling
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
         proxy_next_upstream_tries 3;
@@ -79,7 +87,7 @@ server {
     }
 
     # Catch-all location to prevent exposing server details
-    location / {
+    location /404 {
         return 404;
     }
 }
